header section compelete

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <link rel="icon" href="Flower Asset/floweicon.png">
 </head>
 <body>
-    
+    <!-- header start -->
+    <header class="main-header">
+        <section class="banner-container">
+            <div class="left-conatnt">
+                <h1  class="title">Let's make  <br>
+                    beautiful flowers a <br>
+                    part of your life.</h1>
+                    <p class="title-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                    <button class="btn">Shop Now</button>
+            </div>
+            <div class="banner-image">
+                <img src="/Flower Asset/pngwing 10.png" alt="" class="image">
+            </div>
+        </section>
+    </header>
+
+    <!-- header end -->
+     
 </body>
 </html>
